--- a/Info.plist
+++ b/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>net.trajano.kext.InsomniaT</string>
+	<string>net.trajano.driver.InsomniaT</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -19,15 +19,27 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0d1</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Archimedes Trajano</string>
+	<string>1</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0d1</string>
+	<string>1.0</string>
+	<key>IOKitPersonalities</key>
+	<dict>
+		<key>InsomniaT</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>net.trajano.driver.InsomniaT</string>
+			<key>IOClass</key>
+			<string>net_trajano_driver_InsomniaT</string>
+			<key>IOProviderClass</key>
+			<string>IOResources</string>
+		</dict>
+	</dict>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.kpi.libkern</key>
-		<string>10.0.0</string>
+		<string>10.0</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>10.0</string>
 	</dict>
 </dict>
 </plist>
