Compiles, loads, but log messages are still not appearing
original bzr status:
revno: 4
committer: Archimedes Trajano <trajano@haruna.lan>
branch nick: InsomniaT
timestamp: Mon 2009-09-21 14:36:20 -0400

--- a/Info.plist
+++ b/Info.plist
@@ -26,9 +26,15 @@
 	<dict>
 		<key>InsomniaT</key>
 		<dict>
+			<key>IOResourceMatch</key>
+			<string>IOKit</string>
 			<key>CFBundleIdentifier</key>
 			<string>net.trajano.driver.InsomniaT</string>
+			<key>IOKitDebug</key>
+			<integer>65535</integer>
 			<key>IOClass</key>
+			<string>net_trajano_driver_InsomniaT</string>
+			<key>IOMatchCategory</key>
 			<string>net_trajano_driver_InsomniaT</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
