--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-build
-*.pbxuser
-*.mode1v3
+# Based on http://shanesbrain.net/2008/7/9/using-xcode-with-git
+
+# xcode noise
+build/
 .DS_Store
+*.mode1v3
+*.perspectivev3
+*.pbxuser
+
+# SVN
+.svn
+
+# osx noise
+.DS_Store
+profile
+
