test client finds service
original bzr status:
revno: 25
committer: Archimedes Trajano <developer@trajano.net>
branch nick: InsomniaT
timestamp: Thu 2009-09-24 05:24:54 -0400

--- a/English.lproj/Info.plist
+++ b/English.lproj/Info.plist
@@ -38,6 +38,8 @@
 			<string>net_trajano_driver_InsomniaT</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
+			<key>IOUserClientClass</key>
+			<string>net_trajano_driver_InsomniaT</string>
 		</dict>
 	</dict>
 	<key>OSBundleLibraries</key>
