user client sends parameter data
original bzr status:
revno: 29
committer: Archimedes Trajano <developer@trajano.net>
branch nick: InsomniaT
timestamp: Thu 2009-09-24 11:41:34 -0400

--- a/English.lproj/Info.plist
+++ b/English.lproj/Info.plist
@@ -27,7 +27,7 @@
 		<key>InsomniaT</key>
 		<dict>
 			<key>SleepEnabled</key>
-			<false/>
+			<true/>
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
 			<key>CFBundleIdentifier</key>
