added logging flag to kext
original bzr status:
revno: 44
committer: Archimedes Trajano <developer@trajano.net>
branch nick: InsomniaT
timestamp: Sun 2009-12-20 19:41:24 -0500

--- a/src/kext/Info.plist
+++ b/src/kext/Info.plist
@@ -38,6 +38,8 @@
 			<string>net_trajano_driver_InsomniaTUserClient</string>
 			<key>SleepEnabled</key>
 			<true/>
+			<key>LoggingEnabled</key>
+			<false/>
 		</dict>
 	</dict>
 	<key>OSBundleLibraries</key>
