--- a/src/prefpane/InsomniaT/Info.plist
+++ b/src/prefpane/InsomniaT/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.${PRODUCT_NAME:identifier}</string>
+	<string>net.trajano.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -25,7 +25,7 @@
 	<key>NSMainNibFile</key>
 	<string>InsomniaTPref</string>
 	<key>NSPrefPaneIconFile</key>
-	<string>InsomniaTPref.tiff</string>
+	<string>Coffee Cup.icns</string>
 	<key>NSPrefPaneIconLabel</key>
 	<string>InsomniaT</string>
 	<key>NSPrincipalClass</key>
